@@ -1796,14 +1796,10 @@
             12/31/16).</TD>
         </TR>
         <TR VALIGN="top">
-          <TD>FileOptionsPixelsTruncatedLo</TD>
-          <TD>Number of pixels that will be truncated at 0 when scaling integers to bytes 
-            (default is 40, raised from 10 on 12/31/16).</TD>
-        </TR>
-        <TR VALIGN="top">
-          <TD>FileOptionsPixelsTruncatedHi</TD>
-          <TD>Number of pixels that will be truncated at 255 when scaling to bytes (default 
-            is 40, raised from 10 on 12/31/16).</TD>
+          <TD>FileOptionsPixelsTruncatedLo<br />
+            FileOptionsPixelsTruncatedHi</TD>
+          <TD>These properties have been discontinued; truncation is now expressed as a 
+            percentage and saved as a user setting.</TD>
         </TR>
         <TR VALIGN="top">
           <TD>FileOptionsUnsignedOption</TD>
